# todo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.firecrawl/: todoist-api.md
docs/: android-capture.md  telegram-capture.md
launchd/: com.nathan.todo-refresh.plist
src/todo_cli/: backlog.py  classify.py  cli.py  commands.py  config.py  formatting.py  ledger.py  logseq.py  models.py  notion.py  obsidian.py  plan.py  storage.py  telegram.py  todoist.py  transcribe.py
tests/: conftest.py  test_backlog.py  test_capture.py  test_complete.py  test_mirror.py  test_plan.py  test_refresh.py  test_sync.py  test_telegram_actions.py  test_telegram_obsidian.py  test_transcribe.py  test_unattended.py
