[project]
name = "todo-cli"
version = "0.1.0"
description = "Local-first todo capture with Logseq + Notion sync"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
]

[project.scripts]
todo = "todo_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_cli"]
