[project]
name = "todo-cli"
version = "0.1.0"
description = "Local-first capture CLI: Obsidian vault notes + Todoist task sync"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
]

[project.scripts]
todo = "todo_cli.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
